--- a/package.json
+++ b/package.json
@@ -14,8 +14,12 @@
     "axios": "^1.6.7",
     "bootstrap": "^5.3.2",
     "date-fns": "^3.3.1",
+    "moment": "^2.30.1",
     "react": "^18.2.0",
+    "react-datepicker": "^6.1.0",
     "react-dom": "^18.2.0",
+    "react-icons": "^5.0.1",
+    "react-moment": "^1.1.3",
     "react-redux": "^9.1.0",
     "react-router-dom": "^6.21.3",
     "react-toastify": "^10.0.4",
